<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="32dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/pneumatic_intro_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textColor="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:attr/colorPrimary"
        android:text="Login"
        app:cornerRadius="0dp" />
</LinearLayout>
