<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/pnemuatic_store"
        android:title="Store" />
    <item
        android:id="@+id/nav_library"
        android:contentDescription="LibraryButtonForTest"
        android:icon="@drawable/pneumatic_library"
        android:title="Library" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/pneumatic_profile"
        android:title="Profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/pneumatic_settings"
        android:title="Settings" />
</menu>